syntax = "proto3"

import "google/protobuf/timestamp.proto";

message cradleCo2 {
    string sensorId = 1;
    string environmentId = 2;
    int32  co2Ppm = 3;
    google.protobuf.Timestamp time = 4;
}

message cradleTemperature {
    string sensorId = 1;
    string environmentId = 2;
    double  celsius = 3;
    google.protobuf.Timestamp time = 4;
}

message cradleLight {
    string sensorId = 1;
    string environmentId = 2;
    int32  lumens = 3;
    google.protobuf.Timestamp time = 4;
}

message cradleNoise {
    string sensorId = 1;
    string environmentId = 2;
    int32  decibels = 3;
    google.protobuf.Timestamp time = 4;
}

message cradleHumidity {
    string sensorId = 1;
    string environmentId = 2;
    double  hmidityPercentage = 3;
    google.protobuf.Timestamp time = 4;
}

message braceleteTemperature {
    string sensorId = 1;
    string environmentId = 2;
    double  celsius = 3;
    google.protobuf.Timestamp time = 4;
}

message braceleteWristMovement {
    string sensorId = 1;
    string environmentId = 2;
    double  xAxisAcceleration = 3;
    double  yAxisAcceleration = 4;
    double  zAxisAcceleration = 5;
    google.protobuf.Timestamp time = 6;
}

message braceleteHeartRate {
    string sensorId = 1;
    string environmentId = 2;
    double  heartRate = 3;
    google.protobuf.Timestamp time = 4;
}